--- a/package.json
+++ b/package.json
@@ -6,5 +6,22 @@
   "dependencies": {
     "@swisstronik/utils": "^1.3.0",
     "dotenv": "^16.4.5"
-  }
+  },
+  "name": "swisstronik",
+  "description": "link : [gas](https://www.swisstronik.com/testnet2/dashboard)",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "test": "test",
+    "deploy": "npx hardhat run scripts/deploy.ts --network swisstronik",
+    "get-message": "npx hardhat run scripts/getMessage.ts --network swisstronik",
+    "set-message": "npx hardhat run scripts/setMessage.ts --network swisstronik",
+    "compile": "npx hardhat compile"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
