--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "directories": {
-    "test": "test",
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha",
     "deploy": "npx hardhat run scripts/deploy.ts --network swisstronik",
     "get-message": "npx hardhat run scripts/getMessage.ts --network swisstronik",
     "set-message": "npx hardhat run scripts/setMessage.ts --network swisstronik",
     "compile": "npx hardhat compile"
-  },
-  "scripts": {
-    "test": "mocha"
   },
   "keywords": [],
   "author": "",
